[package]
name = "rust-1"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1"

env_logger = "0.7"

chrono = "0.4"

serde = "1"
serde_derive = "1"
serde_json = "1"

